--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
 	--brush-color: rgb(247, 164, 184);
 	--grid-size: 16;
+	--grid-overlay: 1px solid rgb(7 39 194 / 15%);
 }
 
 *,
@@ -10,8 +11,12 @@
 }
 
 body {
+	min-height: 100vh;
+	margin: 0;
 	display: grid;
+	padding: 0.5em;
 	grid-template-columns: 1fr auto;
+	grid-template-rows: auto 1fr;
 	justify-items: center;
 	font-size: 1.5rem;
 	overflow-x: clip;
@@ -86,15 +91,14 @@ kbd {
 
 .sketch-container {
 	display: grid;
+
+	grid-column: span 2;
+
 	grid-template-columns: repeat(var(--grid-size), 1fr);
 	grid-template-rows: repeat(var(--grid-size), 1fr);
 
-	width: 60vw;
-	height: 60vw;
-
-	min-width: 480px;
-	min-height: 480px;
-
+	width: 960px;
+	height: 960px;
 	border: 1px solid black;
 }
 
@@ -103,5 +107,5 @@ kbd {
 }
 
 .grid-item {
-	border: 1px solid rgb(177 51 51 / 29%);
+	border: var(--grid-overlay);
 }
